--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     <title>Home</title>
 </head>  
 <body style="margin: 0px; background-color: rgb(255, 255, 255); padding:0px; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
-    <div style=" " id="me">
-      
+    <div style=" overflow: hidden; height:0px;" id="me">
+      <div style="text-align: center; padding:20px; text-decoration: none; border-bottom: none;"><a href="" style="text-decoration: none;  margin: 1px; font-size: 16px;">Get Started</a></div>
+      <hr> 
+      <div style="text-align: center; padding:20px; text-decoration: none; border-bottom: none;"><a href="" style="text-decoration: none;    margin: 1px;  font-size: 16px;">About Us</a></div>
+      <hr>  
+      <div style="text-align: center; padding:20px; text-decoration: none; border-bottom: none;"><a href="" style="text-decoration: none;    margin: 1px;  font-size: 16px;">Sign-up </a></div>
+      <hr> 
+      <div style="text-align: center; padding:20px; text-decoration: none; border-bottom: none;"><a href="" style="text-decoration: none;    margin: 1px;  font-size: 16px;">Log-in</a></div>
     </div>
     <nav style="width:100%;  background-color: white;">
         <div style="display: flex; align-items: center; margin:10px; justify-content: space-between; ">
@@ -188,7 +194,69 @@
     <br>
  </div>
 </section>
-    </section>
+    </section> 
+    <h1 style="color:red; text-align: center;">
+          Our live trading
+        </h1>
+       <div style="  padding:10px;">
+        <iframe width="100%" height="315" src="https://www.youtube.com/embed/kccLYI4t6o4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+       </div> 
+       <div style="width:95%;   border-radius: 10px; margin: auto; background-image: url(/css/robot.jpg); background-size: cover; background-color: rgba(0, 0, 0, 0.776); background-blend-mode: multiply;">
+        <div style="color:white; font-size: 22px; text-align: center;">
+          <br>
+          <b>Take a bold step and start earning</b>
+        </div>
+        <div style="color:white; font-size: 16px; text-align: center; padding: 10px;">
+          <p>Join the best investment platform, trusted by people around the world.</p>
+        </div>
+        <div style=" margin:auto; width:30%;">
+          <button style="width: 100%; background-color:rgb(31,18,253); padding: 10px; outline: none; border: none; border-radius: 10px; color:white;">
+              Sign-up
+          </button>
+      </div>
+      <br>
+       </div> 
+       <br>
+    <h1 style="color:red; font-size: 15px; text-align: center;">
+      Our live trading
+    </h1>
+    <br>
+       <marquee behavior="" direction=""><div>
+    <img src="/css/block.png" style="width: 15%; height: 50px;" alt="">
+    <img src="/css/luno (1).png"  style="width: 15%; height: 50px;"alt="">
+    <img src="/css/coin.png" style="width: 15%; height: 50px;" alt="">
+</div></marquee>
+ <footer style="width:100%; background-color:rgba(30, 18, 253, 0.12);">
+  <br>
+  <b style=" color: rgb(31,18,253);  font-size: 17px; margin: 0px; padding: 0px; margin-left:10px;">
+    Progainsmore 
+</b>
+
+<p style="color:rgb(131, 131, 131); font-size: 15px; text-align: center; padding: 5px;">
+  Progainsmore  is a trusted and reliable crypto currency trading company which specialize in trading for investors to a raise good profit.
+</p>
+    
+<b style=" color: rgb(31,18,253);  font-size: 17px; margin: 0px; padding: 0px; margin-left:10px;">
+  Quick links 
+</b>
+<ul>
+ <li>
+   <a href="" style="color: black; text-decoration: none;">Sign-up</a>
+ </li>
+</ul>
+<ul>
+ <li>
+   <a href="" style="color: black; text-decoration: none;">Sign-in</a>
+ </li>
+</ul>
+<ul>
+ <li>
+   <a href="" style="color: black; text-decoration: none;">Term and Condition</a>
+ </li>
+</ul>
+   <div style="text-align: center; color: black; font-size: 13px;"><b>Allright reseved Progainsmore.com  2007-2023</b></div>
+   <br>
+ </footer>
 </body>
 <script>
     function yhem() {
@@ -196,7 +264,7 @@
     let me = document.getElementById("me");
     let go = document.getElementById("go");
     newt.addEventListener("click",()=>{
-       me.style.height="200px" 
+       me.style.height="300px" 
        newt.style.display="none" 
        go.style.display="block"
     })
