--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
        </div> 
        <br>
     <h1 style="color:red; font-size: 15px; text-align: center;">
-      Our live trading
+      Our pertners
     </h1>
     <br>
        <marquee behavior="" direction=""><div>
