--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
       <br>
        </div> 
        <br>
-    <h1 style="color:red; font-size: 15px; text-align: center;">
+    <h1 style="color:rgb(0, 0, 0); font-size: 15px; text-align: center;">
       Our pertners
     </h1>
     <br>
