--- a/index.html
+++ b/index.html
@@ -226,34 +226,7 @@
     <img src="/css/luno (1).png"  style="width: 15%; height: 50px;"alt="">
     <img src="/css/coin.png" style="width: 15%; height: 50px;" alt="">
 </div></marquee>
- <footer style="width:100%; background-color:rgba(0, 0, 0, 0.267);">
-  <br>
-  <b style=" color: rgb(31,18,253);  font-size: 17px; margin: 0px; padding: 0px; margin-left:10px;">
-    Progainsmore 
-</b>
-
-<p style="color:rgb(131, 131, 131); font-size: 15px; text-align: center; padding: 5px;">
-  Progainsmore  is a trusted and reliable crypto currency trading company which specialize in trading for investors to a raise good profit.
-</p>
-    
-<b style=" color: rgb(31,18,253);  font-size: 17px; margin: 0px; padding: 0px; margin-left:10px;">
-  Quick links 
-</b>
-<ul>
- <li>
-   <a href="" style="color: black; text-decoration: none;">Sign-up</a>
- </li>
-</ul>
-<ul>
- <li>
-   <a href="" style="color: black; text-decoration: none;">Sign-in</a>
- </li>
-</ul>
-<ul>
- <li>
-   <a href="" style="color: black; text-decoration: none;">Term and Condition</a>
- </li>
-</ul>
+ <footer style="width:100%;"> 
    <div style="text-align: center; color: black; font-size: 13px;"><b>Allright reseved Progainsmore.com  2007-2023</b></div>
    <br>
  </footer>
