--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Home</title>
 </head>  
 <body style="margin: 0px; background-color: rgb(255, 255, 255); padding:0px; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
+  <div style="width:100%; position: fixed; background-color: black; display:flex; align-items: center; height:100vh;" id="meto">
+    <div style="width:50%; display: flex; justify-content: space-around; height:70px; margin: auto;">
+      <div style="width: 35px; height: 35px; background-color:rgb(31,18,253);  border-radius: 100px;   " ></div>
+      <div style="width: 30px; height: 35px; background-color:rgb(255, 255, 255); border-radius: 100px;" ></div>
+    </div>
+  </div>
     <div style=" overflow: hidden; height:0px;" id="me">
       <div style="text-align: center; padding:20px; text-decoration: none; border-bottom: none;"><a href="" style="text-decoration: none;  margin: 1px; font-size: 16px;">Get Started</a></div>
       <hr> 
@@ -28,7 +34,8 @@
             </div>
             <b style="color: rgb(255, 0, 0); display: none;" id="go">X</b>
         </div>
-    </nav>
+    </nav> 
+    <button style="border:solid gray 2px; width:20%; height: 30px; margin: 10px;">English</button> 
     <header style="width:100%; height: 243px; background-color:  rgba(18, 7, 172, 0.815) ; background-image: url(/css/robot.jpg); background-blend-mode: multiply; background-size: cover;  background-repeat: no-repeat;">
         <br>
         <h1 style="font-size: 26px; text-align: center; color: white; ">
@@ -117,7 +124,7 @@
    
    <div style="width:85%; margin: auto; color: z">
     <br>
-       <b>About us</b> 
+       <b style="color:rgb(31,18,253);">About us</b> 
        <br>
        <div>
         <b style="color:black; font-size:20px;">Details of progainsmore.com</b>
@@ -134,6 +141,15 @@
                 Sign-up
             </button>
         </div>
+   </div>
+         <br>
+   <div style="text-align: center; color:rgb(31,18,253); font-size: 11px;"> 
+    <br> 
+    <b style="color:black;">Our certisficate</b>
+</div>
+   <br>
+   <div style="width:50%; margin:auto;">
+        <img src="/css/cert.jpg" alt="" style="width:100%; height:inherit;">
    </div>
    <br>
     <div style="text-align: center; color:rgb(31,18,253); font-size: 11px;"> 
@@ -201,6 +217,27 @@
        <div style="  padding:10px;">
         <iframe width="100%" height="315" src="https://www.youtube.com/embed/kccLYI4t6o4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
        </div> 
+       <h1 style="color:rgb(31,18,253); text-align: center;">
+        Our Experts
+      </h1>
+      <section>
+        <div style="width: 85%; margin:auto; background-color: rgb(246, 246, 246); ">
+                   <img src="./css/pexels-karolina-grabowska-7876966.jpg" alt="" style="width: 100%; border-radius: 10px;  height:450px;">
+
+                   <div style="color:gray; text-align: center;"><b>Mr anthony william </b></div>
+                   <div style="color:gray; text-align: center;"><p>Signal/crypto trader with over 13 years trading experience</b></div>
+        </div>
+        <div style="width: 85%; margin:auto; background-color: rgb(246, 246, 246); ">
+                   <img src="./css/pexels-tima-miroshnichenko-5439150.jpg" alt="" style="width: 100%; border-radius: 10px;  height:450px;">
+                   <div style="color:gray; text-align: center;"><b>Mr Franklin odowe </b></div>
+                   <div style="color:gray; text-align: center;"><p> Manager progainsmore comapny for 12 years</b></div>
+        </div>
+        <div style="width: 85%; margin:auto; background-color: rgb(246, 246, 246); ">
+                   <img src="./css/Jii.jpg" alt="" style="width: 100%; border-radius: 10px;  height:450px;"> 
+                   <div style="color:gray; text-align: center;"><b>Mr james melph </b></div>
+                   <div style="color:gray; text-align: center;"><p>Ceo progainsmore comapny with over 3,442 credited investors</b></div>
+        </div>
+      </section>
        <div style="width:95%;   border-radius: 10px; margin: auto; background-image: url(/css/robot.jpg); background-size: cover; background-color: rgba(0, 0, 0, 0.776); background-blend-mode: multiply;">
         <div style="color:white; font-size: 22px; text-align: center;">
           <br>
@@ -231,11 +268,29 @@
    <br>
  </footer>
 </body>
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+  (function(){
+  var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+  s1.async=true;
+  s1.src='https://embed.tawk.to/6432ea9c4247f20fefeaabbf/1gtje8tvs';
+  s1.charset='UTF-8';
+  s1.setAttribute('crossorigin','*');
+  s0.parentNode.insertBefore(s1,s0);
+  })();
+  </script>
+  <!--End of Tawk.to Script-->
 <script>
+  // alert("Hello welcome to ulltraprofit.com any transaction in this webpage are secure with blockchain")
     function yhem() {
-        let newt = document.getElementById("neww");
+    let newt = document.getElementById("neww");
     let me = document.getElementById("me");
     let go = document.getElementById("go");
+    let meto = document.getElementById("meto");
+    setTimeout(() => {
+      meto.style.display="none"
+    }, 3000);
     newt.addEventListener("click",()=>{
        me.style.height="300px" 
        newt.style.display="none" 
