--- a/index.html
+++ b/index.html
@@ -211,6 +211,13 @@
         <img src="/css/cert.jpg" alt="" style="width:100%; height:inherit;">
    </div>
    <br>
+   <div style="text-align: center; color:rgb(31,18,253); font-size: 11px;"> 
+    <br> 
+    <b style="color:black;">About company</b>
+</div>
+<div style="width: 95%; margin:auto; padding: 5px;">
+   <video src="/css/InShot_20230410_011830841 (1).mp4" style="width: 100%;" controls></video>
+</div>
     <div style="text-align: center; color:rgb(31,18,253); font-size: 11px;"> 
          <br> 
          <b style="color:black;">How it works</b>
