--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     </div>
   </div>
     <div style=" overflow: hidden; height:0px;" id="me">
-      <div style="text-align: center; padding:20px; text-decoration: none; border-bottom: none;"><a href="" style="text-decoration: none;  margin: 1px; font-size: 16px;">Get Started</a></div>
+      <div style="text-align: center; padding:20px; text-decoration: none; border-bottom: none;"><a href="?a=signup" style="text-decoration: none;  margin: 1px; font-size: 16px;">Get Started</a></div>
+      <hr>   
+      <div style="text-align: center; padding:20px; text-decoration: none; border-bottom: none;"><a href="?a=signup" style="text-decoration: none;    margin: 1px;  font-size: 16px;">Sign-up </a></div>
       <hr> 
-      <div style="text-align: center; padding:20px; text-decoration: none; border-bottom: none;"><a href="" style="text-decoration: none;    margin: 1px;  font-size: 16px;">About Us</a></div>
-      <hr>  
-      <div style="text-align: center; padding:20px; text-decoration: none; border-bottom: none;"><a href="" style="text-decoration: none;    margin: 1px;  font-size: 16px;">Sign-up </a></div>
-      <hr> 
-      <div style="text-align: center; padding:20px; text-decoration: none; border-bottom: none;"><a href="" style="text-decoration: none;    margin: 1px;  font-size: 16px;">Log-in</a></div>
+      <div style="text-align: center; padding:20px; text-decoration: none; border-bottom: none;"><a href="?a=login" style="text-decoration: none;    margin: 1px;  font-size: 16px;">Log-in</a></div>
+            <hr> 
+      <div style="text-align: center; padding:20px; text-decoration: none; border-bottom: none;"><a href="?a=rank" style="text-decoration: none;    margin: 1px;  font-size: 16px;">Company  track</a></div>
     </div>
     <nav style="width:100%;  background-color: white;">
         <div style="display: flex; align-items: center; margin:10px; justify-content: space-between; ">
@@ -57,8 +57,8 @@
          <br> com capital de volta 
       </p> 
       <div style="width:50%; margin: auto; padding: 10px; justify-content: space-around; display: flex;">
-        <button style="width: 40%; height:40px;  outline: none; background-color: rgb(31,18,253); color:white; border:none; font: bold; border-radius: 10px;"><b>Sign-up</b></button>
-        <button style="border:none; width:40%;  outline: none; height: 40px;  font: bold; border-radius: 10px;">Sign-in</button>
+        <button style="width: 40%; height:40px;  outline: none; background-color: rgb(31,18,253); color:white; border:none; font: bold; border-radius: 10px;"> <a href="?a=signup"></a><b>Sign-up</b></button>
+        <button style="border:none; width:40%;  outline: none; height: 40px;  font: bold; border-radius: 10px;"> <a href="?a=login"> Sign-in</a></button>
     </div>
     </header> 
     <br>
@@ -197,7 +197,7 @@
         <br>
         <div style=" margin:auto; width:30%;">
             <button style="width: 100%; background-color:rgb(31,18,253); padding: 10px; outline: none; border: none; border-radius: 10px; color:white;">
-                Sign-up
+                <a href="?a=login" style="color:rgb(255, 255, 255);"> Sign-up</a>
             </button>
         </div>
    </div>
@@ -311,6 +311,37 @@
        <div style="  padding:10px;">
         <iframe width="100%" height="315" src="https://www.youtube.com/embed/kccLYI4t6o4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
        </div> 
+       <section> 
+     <div style="width: 85%; border: rgb(31,18,253) solid 3px; margin: auto;"> 
+      <br>
+      <div style="text-align:center; color:rgba(157, 157, 157, 0.713);">
+      <b>
+          Trusted Investors
+      </b>
+  </div>
+  <div style="text-align:center; color:rgba(157, 157, 157, 0.713); margin:5px;">
+      <b>
+          77,355k
+      </b>
+  </div>
+  <br>
+</div>
+<br>
+<div style="width: 85%; border: rgb(31,18,253) solid 3px; margin: auto;"> 
+  <br>
+  <div style="text-align:center; color:rgba(157, 157, 157, 0.713);">
+  <b>
+      Total withdrawals
+  </b>
+</div>
+<div style="text-align:center; color:rgba(157, 157, 157, 0.713); margin:5px;">
+  <b>
+      127,345m+
+  </b>
+</div>
+<br>
+</div> 
+       </section>
        <h1 style="color:rgb(31,18,253); text-align: center;">
         Our Experts
       </h1>
@@ -342,24 +373,35 @@
         </div>
         <div style=" margin:auto; width:30%;">
           <button style="width: 100%; background-color:rgb(31,18,253); padding: 10px; outline: none; border: none; border-radius: 10px; color:white;">
-              Sign-up
+               <a href="?a=signup"></a> Sign-up
           </button>
       </div>
       <br>
        </div> 
        <br>
     <h1 style="color:rgb(0, 0, 0); font-size: 15px; text-align: center;">
-      Our pertners
+      Our partners
     </h1>
     <br>
        <marquee behavior="" direction=""><div>
     <img src="/css/block.png" style="width: 15%; height: 50px;" alt="">
     <img src="/css/luno (1).png"  style="width: 15%; height: 50px;"alt="">
     <img src="/css/coin.png" style="width: 15%; height: 50px;" alt="">
-</div></marquee>
+</div>
+</marquee>
+<br>
+<h1 style="color:rgb(0, 0, 0); font-size: 15px; text-align: center;">
+ Supported payment methods <br>
+ <br>
+ <img src="/css/favicon.png" alt="">
+</h1>
+<h1 style="color:rgb(0, 0, 0); font-size: 10 px; text-align: center;">
+  All coins accepted
+</h1>
+<br> 
  <footer style="width:100%;"> 
-   <div style="text-align: center; color: black; font-size: 13px;"><b>Allright reseved Progainsmore.com  2007-2023</b></div>
-   <br>
+   <div style="text-align: center; color: black; font-size: 13px;"><b>Allright reserved &copy; Progainsmore.com  2010-2023</b></div>
+   <br> 
  </footer>
 </body>
 <!--Start of Tawk.to Script-->
