--- a/index.html
+++ b/index.html
@@ -340,11 +340,46 @@
   </b>
 </div>
 <br>
-</div> 
+</div>    
        </section>
-       <h1 style="color:rgb(31,18,253); text-align: center;">
-        Our Experts
-      </h1>
+       
+   <section>
+    <h1 style="color:rgb(31,18,253); text-align: center;">
+      Our Plans
+    </h1> 
+    <div style="width: 85%; margin:auto; background-color: rgb(246, 246, 246); "> 
+      <br>
+      <div style="color:rgb(31,18,253); text-align: center;"><b>Regular plan</b></div>
+      <div style="color:gray; text-align: center;"><p> Earning = 5% everyday</b></div> 
+        <div style="color:gray; text-align: center;"><p> Duration = 4 weeks</b></div>
+      <div style="color:gray; text-align: center;"><p> Min deposit = $100.00</b></div>
+      <div style="color:gray; text-align: center;"><p> Max deposit = $1000.00 </b></div> 
+        <div style="color:gray; text-align: center;"><p> Referral Bonus = $10 </b></div>
+          <br>
+        </div>
+        <br>
+        <div style="width: 85%; margin:auto; background-color: rgb(246, 246, 246); "> 
+          <br>
+          <div style="color:rgb(31,18,253); text-align: center;"><b>Premuim plan</b></div>
+          <div style="color:gray; text-align: center;"><p> Earning = 10% everyday</b></div> 
+            <div style="color:gray; text-align: center;"><p> Duration = 7 weeks</b></div>
+          <div style="color:gray; text-align: center;"><p> Min deposit = $1000.00</b></div>
+          <div style="color:gray; text-align: center;"><p> Max deposit = $20,000.00 </b></div> 
+            <div style="color:gray; text-align: center;"><p> Referral Bonus = $10 </b></div>
+              <br>
+            </div>   
+            <div style="width: 85%; margin:auto; background-color: rgb(246, 246, 246); "> 
+              <br>
+              <div style="color:rgb(31,18,253); text-align: center;"><b>Retired plan</b></div>
+              <div style="color:gray; text-align: center;"><p> Earning = 15% everyday</b></div> 
+                <div style="color:gray; text-align: center;"><p> Duration = 15 weeks</b></div>
+              <div style="color:gray; text-align: center;"><p> Min deposit = $20,000.00</b></div>
+              <div style="color:gray; text-align: center;"><p> Max deposit = Unlimited </b></div> 
+                <div style="color:gray; text-align: center;"><p> Referral Bonus = $10 </b></div>
+                  <br>
+                </div>
+   </section>
+   
       <section>
         <div style="width: 85%; margin:auto; background-color: rgb(246, 246, 246); ">
                    <img src="./css/pexels-karolina-grabowska-7876966.jpg" alt="" style="width: 100%; border-radius: 10px;  height:450px;">
